- Prevent 1D barcode from parsing as phone numbers - Add button elevation

--- a/app/src/main/res/layout/fragment_results.xml
+++ b/app/src/main/res/layout/fragment_results.xml
@@ -55,6 +55,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_button_separation"
             android:padding="@dimen/padding_button_internal"
+            android:elevation="4dp"
+            android:stateListAnimator="@animator/animator_elevation"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -74,6 +76,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_button_separation"
             android:padding="@dimen/padding_button_internal"
+            android:elevation="4dp"
+            android:stateListAnimator="@animator/animator_elevation"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -93,6 +97,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_button_separation"
             android:padding="@dimen/padding_button_internal"
+            android:elevation="4dp"
+            android:stateListAnimator="@animator/animator_elevation"
             app:layout_constraintTop_toBottomOf="@id/btn_save_contact"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -112,6 +118,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_button_separation"
             android:padding="@dimen/padding_button_internal"
+            android:elevation="4dp"
+            android:stateListAnimator="@animator/animator_elevation"
             app:layout_constraintTop_toTopOf="@id/btn_call"
             app:layout_constraintBottom_toBottomOf="@id/btn_call"
             app:layout_constraintRight_toRightOf="parent"
@@ -131,6 +139,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_button_separation"
             android:padding="@dimen/padding_button_internal"
+            android:elevation="4dp"
+            android:stateListAnimator="@animator/animator_elevation"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/btn_message"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -162,6 +172,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_button_separation"
             android:padding="@dimen/padding_button_internal"
+            android:elevation="4dp"
+            android:stateListAnimator="@animator/animator_elevation"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@id/btn_history"
@@ -180,6 +192,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_button_separation"
             android:padding="@dimen/padding_button_internal"
+            android:elevation="4dp"
+            android:stateListAnimator="@animator/animator_elevation"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toRightOf="@id/btn_copy_clipboard"
@@ -199,6 +213,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_button_separation"
             android:padding="@dimen/padding_button_internal"
+            android:elevation="4dp"
+            android:stateListAnimator="@animator/animator_elevation"
             app:layout_constraintBottom_toTopOf="@id/btn_copy_clipboard"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@id/btn_share_img"
@@ -216,6 +232,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_button_separation"
+            android:elevation="4dp"
+            android:stateListAnimator="@animator/animator_elevation"
             android:padding="@dimen/padding_button_internal"
             app:layout_constraintBottom_toTopOf="@id/btn_copy_clipboard"
             app:layout_constraintLeft_toRightOf="@id/btn_search"
